# xeid

./: .eslintrc.cjs  LICENSE  README.md  build.ts  bundle.ts  deno.json  import_map.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts  wdio.conf.js
.github/workflows/: build_release.yaml
.storybook/: main.ts  preview.ts
src/: App.tsx  commands.ts  index.html  styles.txt  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: cmds.rs  deno.rs  main.rs
src-tauri/src/core/: deno.rs  linter.rs  mod.rs
src/components/: Editor.tsx
src/components/UI/atoms/: editable-label.tsx  editor.tsx  icon.tsx  index.ts  tab.tsx
src/components/UI/atoms/button/: button.stories.ts  button.tsx
src/components/UI/atoms/editable-label/: editable-label.stories.ts
src/components/UI/atoms/editor/: editor.stories.tsx  editor.tsx
src/components/UI/atoms/icon/: icon.stories.ts
src/components/UI/molecules/: index.ts  tabs.tsx  window-controls.tsx
src/components/UI/molecules/tab/: tab.stories.ts  tab.tsx
src/components/UI/molecules/tabs/: tabs.stories.tsx  tabs.tsx
src/components/UI/molecules/window-controls/: window-controls.stories.ts  window-controls.tsx
src/components/UI/organisms/: index.ts  title-bar.tsx
src/components/UI/organisms/title-bar/: title-bar.stories.ts  title-bar.tsx
src/components/views/: index.ts
src/components/views/editor/: editor.tsx
src/hooks/: use-debounce.ts  use-store.ts
src/store/: store.ts
src/themes/: index.ts  onedark.json
test/specs/: runts.e2e.js
www/: App.tsx  commands.ts  deps.ts  index.html  index.tsx  styles.ts
www/components/: Editor.tsx
www/components/UI/atoms/: button.tsx  editable-label.tsx  icon.tsx  mod.ts  tab.tsx
www/components/UI/molecules/: tabs.tsx  window-controls.tsx
www/components/UI/organisms/: title-bar.tsx
www/components/icons/: add.tsx  close.tsx  maximize.tsx  minimize.tsx  mod.ts  restore.tsx
www/hooks/: mod.ts  use-debounce.ts  use-store.ts
www/public/: theme.json
www/themes/: onedark.json  scrollbar.css
