[package]
name = "runts"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
deno_core = "0.181.0"
serde_v8 = "0.92.0"
deno_ast = { version = "0.26.0", features = ["transpiling"] }
anyhow = "1.0.70"
futures = "0.3.28"
unescape = "0.1.0"
swc_ecma_ast = "0.103.4"
substring = "1.4.5"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
