[package]
name = "xeid"
version = "0.0.1"
description = "eXecution Environment IDE"
authors = ["Alvaro Tinoco"]
license = "MIT"
repository = "https://github.com/mrmarble/xeid"
edition = "2021"


[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
tauri = { version = "1.2.5", features = ["fs-read-file", "fs-remove-file", "fs-write-file", "shell-open", "updater", "window-close", "window-hide", "window-maximize", "window-minimize", "window-show", "window-start-dragging", "window-unmaximize", "window-unminimize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
deno_core = "0.185.0"
deno_ast = { version = "0.26.0", features = ["transpiling"] }
anyhow = "1.0.70"
futures = "0.3.28"
unescape = "0.1.0"
substring = "1.4.5"
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
window-shadows = { git = "https://github.com/tauri-apps/window-shadows", branch = "dev" }
deno_lint = "0.45.0"
tokio = "1.28.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
incremental = false
codegen-units = 1
panic = "abort"
opt-level = "s"
lto = true
