[package]
name = "xeid"
version = "0.0.1"
description = "eXecution Environment IDE"
authors = ["Alvaro Tinoco"]
license = "MIT"
repository = "https://github.com/mrmarble/xeid"
edition = "2021"


[build-dependencies]
tauri-build = { version = "1.3.0", features = [] }

[dependencies]
tauri = { version = "1.3.0", features = ["fs-read-file", "fs-remove-file", "fs-write-file", "shell-open", "updater", "window-close", "window-hide", "window-maximize", "window-minimize", "window-show", "window-start-dragging", "window-unmaximize", "window-unminimize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
deno_core = "0.186.0"
deno_ast = { version = "0.26.0", features = ["transpiling"] }
anyhow = "1.0.70"
futures = "0.3.28"
unescape = "0.1.0"
substring = "1.4.5"
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
window-shadows = { git = "https://github.com/tauri-apps/window-shadows", branch = "dev" }
deno_lint = "0.45.0"
tokio = "1.28.0"
fix-path-env = {git = "https://github.com/tauri-apps/fix-path-env-rs",rev = "6c63c49e29e670343b71fee455e1a6c9145f4a8e"}

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
strip = true # Remove debug symbols
